# ReadingTracker

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  VERSION  book_queue.txt  books.py  books_reading.py  completion_in_past.py  docker-compose.yml  entrypoint.sh  env.template  main.py  pyproject.toml  requirements.txt  server.py  setup.cfg  tracker.py  ytParser.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-docker-image.yml  buildx-docker-image.yml  buildx-ffmpeg.yml  buildx-search.yml  docker-image.yml  linters.yml  python-app.yml
configs/: default.conf  https.md  reading_tracker.service
data/: book_queue.csv  books.json  log.json  materials.db
devops/scripts/: generate_openapi.py
elasticsearch/: Dockerfile  settings.bash
ffmpeg/: Dockerfile
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/api/: cards.ts  client.ts  materials.ts  notes.ts  readingLog.ts  system.ts
frontend/src/components/: AppLayout.tsx  CardsLayout.tsx  CardsSubnav.tsx  CelebrateButton.tsx  Combobox.tsx  MaterialsLayout.tsx  MaterialsSubnav.tsx  MobileNav.tsx  NetworkIframe.tsx  NotFoundMaterials.tsx  NotesLayout.tsx  NotesSubnav.tsx  QueryState.tsx  ReadingLogLayout.tsx  ReadingLogSubnav.tsx  ScrollArrows.tsx  SpellErrorsList.tsx  SpellTextrea.tsx  SystemLayout.tsx  SystemSubnav.tsx
frontend/src/contexts/: ContextMenuContext.tsx
frontend/src/hooks/: useAltchHotkeys.ts  useSpellChecker.ts
frontend/src/lib/: celebrate.ts  combobox.tsx  debounce.ts
frontend/src/materials/: format.ts
frontend/src/pages/: AddMaterialPage.tsx  CompletedPage.tsx  QueuePage.tsx  ReadingPage.tsx  RepeatPage.tsx  UpdateMaterialPage.tsx
frontend/src/pages/cards/: AddCardPage.tsx  ListCardsPage.tsx
frontend/src/pages/materials/: AddMaterialPage.tsx  CompletedPage.tsx  ListCompletedMaterialsPage.tsx  ListMaterialsQueuePage.tsx  ListReadingMaterialsPage.tsx  ListRepeatMaterialsPage.tsx  QueuePage.tsx  ReadingPage.tsx  RepeatPage.tsx  UpdateMaterialPage.tsx
frontend/src/pages/notes/: AddNotePage.tsx  GraphPage.tsx  NoteEditPage.tsx  NotePage.tsx  SearchNotesPage.tsx  UpdateNotePage.tsx
frontend/src/pages/reading_log/: AddReadingLogPage.tsx  ListReadingLogsPage.tsx
frontend/src/pages/system/: SystemBackupPage.tsx  SystemGraphicsPage.tsx  SystemRestorePage.tsx
frontend/src/utils/: isUuid.ts  parseMarkdown.ts
kafka/: config.md  consumer.py  debezium.json  debezium_parser.py  docker-compose.yml  producer.py  refresh_view.py  update_notes_cache.py
manticore/: Dockerfile
metrics/: docker-compose.yml
migrations/: update_notes_format.py
migrator/: migrator.py
prometheus_data/: prometheus.yml
src/: db_api.py  exceptions.py  logger.py  logging_config.py  models.py  settings.py  tracker.py  validators.py
static/: add_card.css  add_log_record.css  add_material.css  add_note.css  cards_list.css  graphic.css  notes.css  queue.css  reading.css  reading_log.css  recall.css  repeating_queue.css  style.css  system.css
static/cards/: add_card.css  cards_list.css
static/errors/: base_error.css
static/js/: add_card.js  celebrate.js  common.js  complete-reading.js  materials.js  notes.js  reading_log.js  system.js
static/materials/: add_material.css  completed.css  queue.css  reading.css  repeating_queue.css
static/notes/: add_note.css  notes.css
static/reading_log/: add_log_record.css
static/system/: system.css
templates/: add_card.html  add_log_record.html  add_material.html  add_note.html  arrow_down.html  arrow_up.html  arrows.html  backup.html  cards_list.html  completed.html  graphic.html  index.html  not_found.html  notes.html  queue.html  reading.html  reading_log.html  recall.html  repeat.html  restore.html  submenu.html  system.html  update_note.html
templates/cards/: add_card.html  cards_list.html  recall.html
templates/errors/: 404.html  500.html
templates/materials/: add_material.html  completed.html  queue.html  reading.html  repeat.html  update_material.html
templates/notes/: add_note.html  graph.html  note.html  notes.html  update_note.html
templates/reading_log/: add_log_record.html  reading_log.html
templates/system/: backup.html  graphic.html  restore.html
tests/: conftest.py  test_cards.py  test_database.py  test_manticoresearch.py  test_materials.py  test_notes.py  test_notes_schemas.py  test_parse_duration.py  test_parse_habr.py  test_parse_youtube.py  test_reading_log.py  test_speech_recognizer.py  test_statistics.py  test_system.py  test_trends.py
tracker/: main.py  tracker.py  validators.py
tracker/api/v1/: cards.py  materials.py  notes.py  reading_logs.py  system.py
tracker/cards/: db.py  routes.py  schemas.py  spa.py
tracker/common/: __init__.py  database.py  elasticsearch.py  kafka.py  keydb_api.py  log.py  logger.py  manticoresearch.py  models.py  redis_api.py  schemas.py  settings.py
tracker/dump/: dump.py  settings.py
tracker/google_drive/: db.py  drive_api.py  dump.py  main.py
tracker/materials/: action_routes.py  db.py  html_routes.py  routes.py  schemas.py  spa.py
tracker/models/: enums.py  models.py
tracker/notes/: action_routes.py  cached.py  db.py  es.py  html_routes.py  links.py  listing.py  routes.py  schemas.py  spa.py  speech_recognizer.py
tracker/protos/: backup.proto  backup_pb2.py  backup_pb2.pyi  backup_pb2_grpc.py  google_drive.proto  google_drive_pb2.py  google_drive_pb2.pyi  google_drive_pb2_grpc.py
tracker/reading_log/: db.py  routes.py  schemas.py  spa.py  statistics.py
tracker/speech_to_text/: routes.py  schemas.py
tracker/system/: db.py  routes.py  schemas.py  spa.py  trends.py
tracker/tests/: test_database.py  test_materials.py  test_notes.py  test_notes_schemas.py  test_reading_log.py  test_statistics.py  test_system.py  test_trends.py
tracker/trends/: db.py  service.py  trends.py
